# channel-copilot

./: .env-example  .gitignore  CLAUDE.md  README.md  env.yml  environment.yml  justfile  main.py  makefile  pyproject.toml  settings.py  skills-lock.json
.claude/skills/: python-executor  python-testing-patterns
app/: main.py  settings.py
app/agents/: utils.py
app/chains/: blog_chain.py  dalle_chain.py  linkedin_chain.py  summary_chain.py  thread_chain.py  tweet_chain.py  youtube_chain.py
app/image/: dalle.py
app/transcript/: audio.py  video.py  whisper.py
chains/: blog_chain.py  dalle_chain.py  dalle_prompt.py  linkedin_chain.py  summary_chain.py  summary_prompt.py  thread_chain.py  tweet_chain.py  twet_chain.py  twet_prompt.py  twets_chain.py  twets_prompt.py  youtube_chain.py
data/2023-07-12-nvidia/: summarize.txt  transcript.txt
data/2023-08-16-chatbot/: dalle-prompts.txt  summarize.txt  transcript.txt  tweets.txt
data/2023-09-04-migration/: transcript.txt  tweets.txt
data/2023-09-12-standalone/: summarize.txt  transcript.txt  tweet.txt
data/2023-10-10-syntax/: summarize.txt  transcript.txt  tweet.txt
data/2024-01-25-migration/: summarize.txt  transcript.txt
data/2024-01-28-figma/: summarize.txt  youtube.txt
data/2024-02-02-syntax/: summarize.txt  transcript.txt  youtube.txt
data/2024-02-09-builders/: linkedin.txt  thread.txt
data/2024-03-27-whisper/: linkedin.txt  summarize.txt
data/2024-04-01-whisper/: linkedin.txt  summarize.txt
data/2024-04-18-angular-views/: linkedin.txt  summarize.txt  transcript.txt  (+1 more)
image/: dalle.py  image.py  stable_diffusion.py
notebooks/: demo.ipynb
output/: dalle-prompts.txt  summarize.txt  transcript.txt  tweets.txt
transcript/: audio.py  whisper.py
(+300 files in other folders)
