[tool.poetry]
name = "channel-copilot"
version = "0.1.0"
description = ""
authors = ["Nicolas Molina Monroy <hi@nicobytes.com>"]
readme = "README.md"
packages = [{include = "channel_copilot"}]

[tool.poetry.dependencies]
python = "~3.10"
langchain = "0.1.4"
openai = "1.10.0"
openai-whisper = "20231117"
python-dotenv = "^1.0.0"
pydantic = "^1.10.9"
ffmpeg-python = "^0.2.0"
moviepy = "^1.0.3"
typer = "^0.9.0"
rich = "^13.5.2"
tensorflow = "^2.13.0"
keras-cv = "^0.6.1"
keras-core = "^0.1.4"
tiktoken = "0.5.2"
langchain-openai = "^0.0.5"
langchainhub = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
