[tool.poetry]
name = "channel-copilot"
version = "0.1.0"
description = ""
authors = ["Nicolas Molina Monroy <hi@nicobytes.com>"]
readme = "README.md"
packages = [{include = "channel_copilot"}]

[tool.poetry.dependencies]
python = "~3.10"
openai = "1.44.0"
openai-whisper = "20231117"
python-dotenv = "^1.0.1"
pydantic = "2.9.0"
moviepy = "1.0.3"
typer = "^0.12.5"
rich = "^13.8.0"
tiktoken = "0.7.0"
black = "^24.8.0"
langchain = "0.2.16"
langchain-openai = "^0.1.23"
ffmpeg-python = "^0.2.0"
langchain-core = "^0.2.38"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
