[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Nicolas Molina Monroy", email = "hi@nicobytes.com" }]

[tool.setuptools.packages.find]
include = ["channel_copilot*"]
